--- a/index.html
+++ b/index.html
@@ -1,9 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <title>Leitor de Pasta .tdu</title>
+
+  <style>
+    /* Garante tela cheia */
+    html, body {
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      display: flex;
+      flex-direction: column;
+      background: #111;
+      color: #fff;
+      font-family: Arial, sans-serif;
+    }
+
+    h3 {
+      text-align: center;
+      margin: 20px 0;
+    }
+
+    input {
+      margin: 0 auto 20px;
+      display: block;
+      font-size: 16px;
+    }
+
+    pre {
+      flex: 1;                 /* ocupa o resto da tela */
+      background: #1e1e1e;
+      margin: 0 20px 20px;
+      padding: 15px;
+      overflow: auto;          /* rolagem se passar do limite */
+      border-radius: 8px;
+      white-space: pre-wrap;   /* quebra linha */
+    }
+  </style>
 </head>
+
 <body>
 
 <h3>Escolha uma pasta com arquivos .tdu</h3>
